fixed small alignment issue on portfolio slide

--- a/src/App.css
+++ b/src/App.css
@@ -713,6 +713,7 @@ h3 {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   gap: 8px;
 }
 .link-icon-and-title p {
